Regression: Deleting Object in outliner with a specific filter setting crashes Blender. #101233

Closed
opened 2022-09-21 00:38:32 +02:00 by Yutaka Fukumoto · 9 comments

Blender Version
Broken: (3.3)
Worked: (3.2.2)

Deleting Object in outliner with a specific filter setting crashes Blender.

Exact steps for others to reproduce the error

  • Open default scene
  • Hide collections using outliner's filter setting "Show Collections".
  • And just delete object in outliner using Delete or Delete Hierarchy and Blender crashes.
Stack trace:
blender.exe         :0x00007FF71FDB5DE0  blender::ed::outliner::outliner_is_collection_tree_element C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_collections.cc:48
blender.exe         :0x00007FF71FDCF940  blender::ed::outliner::outliner_collect_objects_to_delete C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_tools.cc:2358
blender.exe         :0x00007FF71FDB6820  blender::ed::outliner::outliner_tree_traverse C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_utils.cc:287
blender.exe         :0x00007FF71FDCFF30  blender::ed::outliner::outliner_delete_exec C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_tools.cc:2412
blender.exe         :0x00007FF71F374990  wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1446
blender.exe         :0x00007FF71F3722D0  wm_handler_operator_call C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2469
blender.exe         :0x00007FF71F373D20  wm_handlers_do_keymap_with_keymap_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2866
blender.exe         :0x00007FF71F3734C0  wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3187
blender.exe         :0x00007FF71F3728E0  wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3328
blender.exe         :0x00007FF71F378BE0  wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3970
blender.exe         :0x00007FF71F35F250  WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:643
blender.exe         :0x00007FF71F055EA0  main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:580
blender.exe         :0x00007FF72056EB54  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFC5AC754D0  BaseThreadInitThunk
ntdll.dll           :0x00007FFC5AEE4830  RtlUserThreadStart
**Blender Version** Broken: (3.3) Worked: (3.2.2) Deleting Object in outliner with a specific filter setting crashes Blender. **Exact steps for others to reproduce the error** - Open default scene - Hide collections using outliner's filter setting "Show Collections". - And just delete object in outliner using Delete or Delete Hierarchy and Blender crashes. ```lines=10 Stack trace: blender.exe :0x00007FF71FDB5DE0 blender::ed::outliner::outliner_is_collection_tree_element C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_collections.cc:48 blender.exe :0x00007FF71FDCF940 blender::ed::outliner::outliner_collect_objects_to_delete C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_tools.cc:2358 blender.exe :0x00007FF71FDB6820 blender::ed::outliner::outliner_tree_traverse C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_utils.cc:287 blender.exe :0x00007FF71FDCFF30 blender::ed::outliner::outliner_delete_exec C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_tools.cc:2412 blender.exe :0x00007FF71F374990 wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1446 blender.exe :0x00007FF71F3722D0 wm_handler_operator_call C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2469 blender.exe :0x00007FF71F373D20 wm_handlers_do_keymap_with_keymap_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2866 blender.exe :0x00007FF71F3734C0 wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3187 blender.exe :0x00007FF71F3728E0 wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3328 blender.exe :0x00007FF71F378BE0 wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3970 blender.exe :0x00007FF71F35F250 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:643 blender.exe :0x00007FF71F055EA0 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:580 blender.exe :0x00007FF72056EB54 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFC5AC754D0 BaseThreadInitThunk ntdll.dll :0x00007FFC5AEE4830 RtlUserThreadStart ```

Added subscriber: @Zcyber

Added subscriber: @Zcyber

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Pratik Borhade self-assigned this 2022-09-21 03:41:51 +02:00
Pratik Borhade changed title from Deleting Object in outliner with a specific filter setting crashes Blender. to Regression: Deleting Object in outliner with a specific filter setting crashes Blender. 2022-09-21 03:42:51 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Thanks for the report. I can confirm the crash
First bad commit: 188f7585a1
Looks like crash caused due to null pointer access.
cc @mont29

Thanks for the report. I can confirm the crash First bad commit: 188f7585a1 Looks like crash caused due to null pointer access. cc @mont29
Pratik Borhade removed their assignment 2022-09-21 12:12:40 +02:00

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

oh I accidently claimed the ticket. I think fix would be a simple check for te_parent before passing it to outliner_is_collection_tree_element
Reassigning myself.

oh I accidently claimed the ticket. I think fix would be a simple check for `te_parent` before passing it to `outliner_is_collection_tree_element` Reassigning myself.
Pratik Borhade self-assigned this 2022-09-21 15:08:11 +02:00

This issue was referenced by 28e09980a2

This issue was referenced by 28e09980a2d09eaea3f49cb080265014a4f1c2f4

This issue was referenced by 4186b0ebe4

This issue was referenced by 4186b0ebe4e86eb4de5e88dd333ea3884748173c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101233
There is no content yet.