Fix T101233: Crash on deleting the object in outliner due to null pointer access

After rB188f7585a183 deleting the object results in crash due
to null pointer access if collections are filtered out

Reviewed by: mont29

Differential Revision: https://developer.blender.org/D16031